--- a/flight/PX2IO/Makefile
+++ b/flight/PX2IO/Makefile
@@ -160,7 +160,7 @@ CPPSRCARM =
 # Even though the DOS/Win* filesystem matches both .s and .S the same,
 # it will preserve the spelling of the filenames, and gcc itself does
 # care about how the name is spelled on its command-line.
-ASRC = $(PIOSSTM32F10X)/startup_stm32f10x_$(MODEL).S
+ASRC = $(PIOSSTM32F10X)/startup_stm32f100_$(MODEL).S
 
 # List Assembler source files here which must be assembled in ARM-Mode..
 ASRCARM =
