Add a hook for not configuring the clock at all; clock config eats a bunch of code space and we don't (necessarily) need it for a bootloader.

--- a/flight/Bootloaders/PX2IO/Makefile
+++ b/flight/Bootloaders/PX2IO/Makefile
@@ -177,6 +177,7 @@ CDEFS = -DSTM32F10X_MD_VL
 CDEFS += -DUSE_STDPERIPH_DRIVER
 CDEFS += -DHSE_VALUE=$(OSCILLATOR_FREQ)
 CDEFS += -DUSE_$(BOARD)
+CDEFS += -DPIOS_CLOCK_CONFIG_BYPASS
 
 # Provide (only) the bootloader with board-specific defines
 BLONLY_CDEFS += -DBOARD_TYPE=$(BOARD_TYPE)
