--- a/flight/Bootloaders/PX2IO/Makefile
+++ b/flight/Bootloaders/PX2IO/Makefile
@@ -71,8 +71,8 @@ SRC += $(PX2IO_BL)/pios_board.c
 SRC += $(PX2IO_BL)/i2c_fsm.c
 
 ## Common debug bits
-SRC += $(PX2IO_BL)/cm3_fault_handlers.c
-SRC += $(PX2IO_BL)/dcc_stdio.c
+#SRC += $(PX2IO_BL)/cm3_fault_handlers.c
+#SRC += $(PX2IO_BL)/dcc_stdio.c
 
 ## PIOS Hardware (STM32F10x)
 SRC += $(PIOSSTM32F10X)/pios_sys.c
