Enable the FreeRTOS 'timers'; we will use them instead of the RTC second interrupt that the F10x port uses (F2xx has no RTC second interrupt)

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -223,7 +223,7 @@ SRC += $(STMSPDSRCDIR)/misc.c
 SRC += $(RTOSSRCDIR)/list.c
 SRC += $(RTOSSRCDIR)/queue.c
 SRC += $(RTOSSRCDIR)/tasks.c
-#SRC += $(RTOSSRCDIR)/timers.c
+SRC += $(RTOSSRCDIR)/timers.c
 
 ## RTOS Portable
 SRC += $(RTOSSRCDIR)/portable/GCC/ARM_CM3/port.c
