Turn on dead code/data stripping; try to get the built product's size back under control.

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -382,6 +382,7 @@ CFLAGS += -O$(OPT)
 CFLAGS += -mcpu=$(MCU)
 CFLAGS += $(CDEFS)
 CFLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS)) -I.
+CFLAGS += -ffunction-sections -fdata-sections
 
 CFLAGS += -mapcs-frame
 CFLAGS += -fomit-frame-pointer
