Fixed MAVLink issues, still have to hunt down source of current system alarm. RX works with mode command, waypoint interface not working yet

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -50,7 +50,7 @@ CODE_SOURCERY ?= NO
 ifeq ($(CODE_SOURCERY), YES)
 REMOVE_CMD = cs-rm
 else
-REMOVE_CMD = rm
+REMOVE_CMD = rm -rf
 endif
 
 FLASH_TOOL = OPENOCD
