Updated to most recent MAVLink

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -40,9 +40,6 @@ DEBUG ?= YES
 # XXX remove this, all UARTs are supported always
 ENABLE_AUX_UART ?= NO
 
-# Use the mavlink instead of the UAVTalk protocol
-USE_MAVLINK ?= NO
-
 # Set to YES when using Code Sourcery toolchain on Windows
 CODE_SOURCERY ?= NO
 
@@ -340,9 +337,7 @@ DEBUGF = dwarf-2
 # Place project-specific -D (define) and/or
 # -U options for C here.
 CDEFS = -DSTM32F2XX
-ifeq ($(USE_MAVLINK), YES)
-CDEFS += -DUSE_MAVLINK # Selects MAVLink as protocol
-endif
+CDEFS += -DMAVLINK_NO_DATA
 CDEFS += -D__ARM_ARCH_7M__
 CDEFS += -DHSE_VALUE=$(OSCILLATOR_FREQ)
 CDEFS += -DUSE_STDPERIPH_DRIVER
