Turn off MAVlink.
Fix GPS COM configuration - zero-size buffers are not supported (or if they are, they break horribly)

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -52,7 +52,8 @@ FLASH_TOOL = OPENOCD
 #MODULES =  Actuator Telemetry GPS ManualControl Altitude AHRSComms Stabilization Guidance FirmwareIAP FlightPlan
 
 #MODULES = MAVLink PX2Attitude Altitude Stabilization GPS FlightPlan ManualControl Guidance
-MODULES = MAVLink Telemetry Actuator Stabilization ManualControl GPS Altitude Guidance
+#MODULES = MAVLink Telemetry Actuator Stabilization ManualControl GPS Altitude Guidance
+MODULES = Telemetry Actuator Stabilization ManualControl Altitude Guidance GPS
 PYMODULES = FlightPlan
 #MODULES = PX2Test
 
