Minor cleanups, fixed a stupid bug with the parameter interface. Reading / writing now works, storage is mising

--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -333,6 +333,7 @@ DEBUGF = dwarf-2
 # -U options for C here.
 CDEFS = -DSTM32F2XX
 #CDEFS += -DMAVLINK_SEPARATE_HELPERS
+#CDEFS += -DMAVLINK_USE_CONVENIENCE_FUNCTIONS
 CDEFS += -D__ARM_ARCH_7M__
 CDEFS += -DHSE_VALUE=$(OSCILLATOR_FREQ)
 CDEFS += -DUSE_STDPERIPH_DRIVER
