Build px2io with zalloc.

--- a/flight/PX2IO/Makefile
+++ b/flight/PX2IO/Makefile
@@ -69,6 +69,8 @@ PIOS			= ../PiOS
 PIOSINC			= $(PIOS)/inc
 PIOSSTM32F10X	= $(PIOS)/STM32F10x
 PIOSCOMMON		= $(PIOS)/Common
+PIOSCOMMONLIB	= $(PIOS)/Common/Libraries
+ZALLOCLIB		= $(PIOSCOMMONLIB)/zalloc
 PIOSBOARDS		= $(PIOS)/Boards
 APPLIBDIR		= $(PIOSSTM32F10X)/Libraries
 STMLIBDIR		= $(APPLIBDIR)
@@ -140,7 +142,12 @@ SRC += $(RTOSSRCDIR)/tasks.c
 
 ## RTOS Portable
 SRC += $(RTOSSRCDIR)/portable/GCC/ARM_CM3/port.c
-SRC += $(RTOSSRCDIR)/portable/MemMang/heap_2.c
+#SRC += $(RTOSSRCDIR)/portable/MemMang/heap_2.c
+
+## Better malloc/free
+SRC += $(ZALLOCLIB)/malloc.c
+SRC += $(ZALLOCLIB)/zalloc.c
+SRC += $(ZALLOCLIB)/zalloc_FreeRTOS.c
 
 # List C source files here which must be compiled in ARM-Mode (no -mthumb).
 # use file-extension c for "c-only"-files
@@ -181,6 +188,7 @@ EXTRAINCDIRS  += $(PIOSBOARDS)
 EXTRAINCDIRS  += $(STMSPDINCDIR)
 EXTRAINCDIRS  += $(CMSISDIR)
 EXTRAINCDIRS  += $(RTOSINCDIR)
+EXTRAINCDIRS  += $(ZALLOCLIB)
 #EXTRAINCDIRS  += $(APPLIBDIR)
 EXTRAINCDIRS  += $(RTOSSRCDIR)/portable/GCC/ARM_CM3
 
