--- a/flight/PX2IO/Makefile
+++ b/flight/PX2IO/Makefile
@@ -301,6 +301,8 @@ endif
 
 CFLAGS += -Wall 
 CFLAGS += -Werror
+CFLAGS += -finstrument-functions
+#CFLAGS += -fstack-limit-register=r10
 CFLAGS += -Wa,-adhlns=$(addprefix $(OUTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 CFLAGS += -Wl,-static -fdata-sections -ffunction-sections -Wl,--gc-sections
 ifeq ($(DEBUG),NO)
