--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -49,7 +49,9 @@ endif
 FLASH_TOOL = OPENOCD
 
 # List of modules to include
-MODULES = MAVLink PX2Attitude Actuator Stabilization ManualControl Altitude GPS Guidance # Batt module is crashing: Battery
+MODULES = PX2Attitude Actuator Stabilization ManualControl Altitude GPS Guidance # Batt module is crashing: Battery
+# Telemetry must be last to grab the optional modules
+MODULES += MAVLink #Telemetry
 #MODULES = Telemetry Actuator Stabilization ManualControl Altitude Guidance GPS
 PYMODULES = FlightPlan
 #MODULES = PX2Test
