--- a/flight/PX2FMU/Makefile.posix
+++ b/flight/PX2FMU/Makefile.posix
@@ -55,7 +55,7 @@ FLASH_TOOL = OPENOCD
 USE_THUMB_MODE = YES
 
 # List of modules to include
-MODULES =  Actuator Stabilization Guidance ManualControl FlightPlan
+MODULES = Actuator Stabilization Guidance ManualControl FlightPlan GPS
 #MODULES =  Telemetry ManualControl Actuator Attitude Stabilization
 #MODULES = Telemetry Example
 #MODULES = Telemetry MK/MKSerial
@@ -137,6 +137,9 @@ SRC += $(OUTDIR)/pmlibusr_nat.c
 SRC += $(wildcard ${PYMITEVM}/*.c)
 SRC += $(wildcard ${PYMITEPLAT}/*.c)
 
+# MAVLink mission lib
+SRC += $(OPSYSTEM)/../../Libraries/mavlink/missionlib/waypoints.c
+
 ## MODULES
 SRC += ${foreach MOD, ${MODULES}, ${wildcard ${OPMODULEDIR}/${MOD}/*.c}}
 SRC += ${OUTDIR}/InitMods.c
@@ -146,6 +149,7 @@ SRC += $(OPSYSTEM)/openpilot.c
 SRC += $(OPSYSTEM)/pios_board_posix.c
 SRC += $(OPSYSTEM)/alarms.c
 SRC += $(OPSYSTEM)/taskmonitor.c
+SRC += $(OPSYSTEM)/mavlink_debug.c
 SRC += $(OPUAVTALK)/uavtalk.c
 SRC += $(OPUAVOBJ)/uavobjectmanager.c
 SRC += $(OPUAVOBJ)/eventdispatcher.c
@@ -167,17 +171,23 @@ CFLAGS_UAVOBJECTS = $(UAVOBJDEFINE)
 endif
 
 ## PIOS Hardware (posix)
+SRC += $(PIOSPOSIX)/pios_crc.c
 SRC += $(PIOSPOSIX)/pios_sys.c
 SRC += $(PIOSPOSIX)/pios_led.c
+SRC += $(PIOSPOSIX)/pios_irq.c
 SRC += $(PIOSPOSIX)/pios_delay.c
 SRC += $(PIOSPOSIX)/pios_sdcard.c
 SRC += $(PIOSPOSIX)/pios_udp.c
 SRC += $(PIOSPOSIX)/pios_com.c
 SRC += $(PIOSPOSIX)/pios_servo.c
 SRC += $(PIOSPOSIX)/pios_wdg.c
+SRC += $(PIOSPOSIX)/pios_debug.c
+
+SRC += $(PIOSPOSIX)/pios_rcvr.c
+
 
 ## Libraries for flight calculations
-#SRC += $(FLIGHTLIB)/fifo_buffer.c
+SRC += $(FLIGHTLIB)/fifo_buffer.c
 SRC += $(FLIGHTLIB)/WorldMagModel.c
 SRC += $(FLIGHTLIB)/CoordinateConversions.c
 ## RTOS and RTOS Portable 
@@ -191,7 +201,9 @@ else
   SRC += $(RTOSSRCDIR)/tasks_posix.c
   SRC += $(RTOSSRCDIR)/portable/GCC/Posix/port_posix.c
 endif
-SRC += $(RTOSSRCDIR)/portable/MemMang/heap_3.c
+#SRC += $(RTOSSRCDIR)/portable/MemMang/heap_3.c
+SRC += $(PIOSPOSIX)/../../PiOS/Common/Libraries/msheap/msheap.c
+SRC += $(PIOSPOSIX)/../../PiOS/Common/Libraries/msheap/pios_msheap.c
 
 
 
