Made compilation more forgiving

--- a/flight/PX2FMU/Makefile.posix
+++ b/flight/PX2FMU/Makefile.posix
@@ -336,7 +336,7 @@ CFLAGS += -fpromote-loop-indices
 endif
 
 CFLAGS += -Wall
-CFLAGS += -Werror
+#CFLAGS += -Werror
 # Compiler flags to generate dependency files:
 CFLAGS += -MD -MP -MF $(OUTDIR)/dep/$(@F).d
 CFLAGS += -DMAVLINK_USE_CONVENIENCE_FUNCTIONS
