added the gdb and telnet ports

--- a/flight/Project/OpenOCD/olimex-jtag-tiny.cfg
+++ b/flight/Project/OpenOCD/olimex-jtag-tiny.cfg
@@ -9,3 +9,6 @@ ft2232_device_desc "Olimex OpenOCD JTAG TINY"
 ft2232_layout olimex-jtag
 ft2232_vid_pid 0x15ba 0x0004
 
+gdb_port 3333
+tcl_port 6666
+telnet_port 4444
