--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -49,10 +49,10 @@ endif
 FLASH_TOOL = OPENOCD
 
 # List of modules to include
-MODULES = PX2AttitudeTL Actuator Stabilization ManualControl Altitude GPS Guidance Battery PX2Buzzer
-# Telemetry must be last to grab the optional modules
-#MODULES += MAVLink
-MODULES += Telemetry
+MODULES = PX2AttitudeTL Actuator Stabilization ManualControl GPS Altitude Guidance Battery PX2Buzzer
+# Telemetry must be last to grab the optional modules  # Altitude
+MODULES += MAVLink
+#MODULES += Telemetry
 PYMODULES = FlightPlan
 #MODULES = PX2Test
 
