Kick off the skeleton for a module supporting PX2IO

--- a/flight/PX2IO/Makefile
+++ b/flight/PX2IO/Makefile
@@ -80,6 +80,7 @@ CMSISDIR		= $(STMLIBDIR)/CMSIS/Core/CM3
 RTOSDIR			= $(APPLIBDIR)/FreeRTOS
 RTOSSRCDIR		= $(RTOSDIR)/Source
 RTOSINCDIR		= $(RTOSSRCDIR)/include
+PX2IOMODULEDIR	= ../Modules/PX2IO
 DOXYGENDIR		= ../Doc/Doxygen
 
 
@@ -187,6 +188,7 @@ EXTRAINCDIRS  += $(PIOSBOARDS)
 EXTRAINCDIRS  += $(STMSPDINCDIR)
 EXTRAINCDIRS  += $(CMSISDIR)
 EXTRAINCDIRS  += $(RTOSINCDIR)
+EXTRAINCDIRS  += $(PX2IOMODULEDIR)
 #EXTRAINCDIRS  += $(APPLIBDIR)
 EXTRAINCDIRS  += $(RTOSSRCDIR)/portable/GCC/ARM_CM3
 
