--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -49,10 +49,11 @@ endif
 FLASH_TOOL = OPENOCD
 
 # List of modules to include
-MODULES = PX2AttitudeTL Actuator Stabilization ManualControl GPS Guidance Battery PX2Buzzer
+MODULES = PX2AttitudeTL Actuator Stabilization ManualControl Altitude GPS Battery PX2Buzzer
+# Enable Guidance only once REALLY in use: Guidance
 # Telemetry must be last to grab the optional modules  # Altitude
-MODULES += MAVLink
-#MODULES += Telemetry
+#MODULES += MAVLink
+MODULES += Telemetry
 PYMODULES = FlightPlan
 #MODULES = PX2Test
 
