--- a/flight/PX2FMU/Makefile
+++ b/flight/PX2FMU/Makefile
@@ -24,6 +24,9 @@
 
 WHEREAMI := $(dir $(lastword $(MAKEFILE_LIST)))
 TOP      := $(realpath $(WHEREAMI)/../../)
+
+BOARD_NAME	= PX2FMU
+
 include $(TOP)/make/firmware-defs.mk
 include $(TOP)/make/boards/$(BOARD_NAME)/board-info.mk
 
@@ -32,9 +35,6 @@ TARGET := fw_$(BOARD_NAME)
 
 # Directory for output files (lst, obj, dep, elf, sym, map, hex, bin etc.)
 OUTDIR := $(TOP)/build/$(TARGET)
-
-# Building for M3 / M4 with FPU
-M4	?= YES
 
 # Debugging (YES/NO) ?
 DEBUG ?= YES
@@ -49,10 +49,6 @@ else
 REMOVE_CMD = rm -rf
 endif
 
-ifeq ($(M4), YES)
-MCU	= cortex-m4
-endif
-
 FLASH_TOOL = OPENOCD
 
 # List of modules to include
@@ -65,41 +61,36 @@ PYMODULES = FlightPlan
 #MODULES = PX2Test
 
 # Paths
-OPSYSTEM = ./System
+FLIGHT = $(TOP)/flight
+
+OPSYSTEM = $(WHEREAMI)/System
 OPSYSTEMINC = $(OPSYSTEM)/inc
-OPUAVTALK = ../UAVTalk
+
+OPUAVTALK = $(FLIGHT)/UAVTalk
 OPUAVTALKINC = $(OPUAVTALK)/inc
-MAVLINK = ../Libraries/mavlink/include
+
+MAVLINK = $(FLIGHT)/Libraries/mavlink/include
 MAVLINKCOMMON = $(MAVLINK)/common
 MAVLINKMISSIONLIB = $(MAVLINK)/../missionlib
-OPUAVOBJ = ../UAVObjects
+
+OPUAVOBJ = $(FLIGHT)/UAVObjects
 OPUAVOBJINC = $(OPUAVOBJ)/inc
-OPTESTS  = ./Tests
-OPMODULEDIR = ../Modules
-FLIGHTLIB = ../Libraries
+
+OPTESTS  = $(WHEREAMI)/Tests
+
+OPMODULEDIR = $(FLIGHT)/Modules
+
+FLIGHTLIB = $(FLIGHT)/Libraries
 FLIGHTLIBINC = $(FLIGHTLIB)/inc
-PIOS = ../PiOS
+
+PIOS = $(FLIGHT)/PiOS
 PIOSINC = $(PIOS)/inc
-PIOSSTM32F2XX = $(PIOS)/STM32F2xx
-PIOSSTM32F2XXINC = $(PIOSSTM32F2XX)/inc
-PIOSCOMMON = $(PIOS)/Common
-PIOSCOMMONLIB = $(PIOS)/Common/Libraries
 PIOSBOARDS = $(PIOS)/Boards
-APPLIBDIR = $(PIOSSTM32F2XX)/Libraries
-STMLIBDIR = $(APPLIBDIR)
-STMSPDDIR = $(STMLIBDIR)/STM32F2xx_StdPeriph_Driver
-STMUSBDIR = $(PIOSSTM32F2XX)
-STMSPDSRCDIR = $(STMSPDDIR)/src
-STMSPDINCDIR = $(STMSPDDIR)/inc
-STMUSBSRCDIR = $(STMUSBDEVDIR)/Core/src
-STMUSBINCDIR = $(STMUSBDEVDIR)/Core/inc
-CMSISDIR  = $(STMLIBDIR)/CMSIS/Core/CM3
-DOSFSDIR  = $(APPLIBDIR)/dosfs
-MSDDIR  = $(APPLIBDIR)/msd
-RTOSDIR = $(APPLIBDIR)/FreeRTOS
-RTOSSRCDIR = $(RTOSDIR)/Source
-RTOSINCDIR = $(RTOSSRCDIR)/include
-DOXYGENDIR = ../Doc/Doxygen
+PIOSCOMMON = $(PIOS)/Common
+PIOSCOMMONLIB = $(PIOSCOMMON)/Libraries
+
+DOXYGENDIR = $(FLIGHT)/Doc/Doxygen
+
 PYMITE = $(FLIGHTLIB)/PyMite
 PYMITELIB = $(PYMITE)/lib
 PYMITEPLAT = $(PYMITE)/platform/openpilot
@@ -108,10 +99,40 @@ PYMITEVM = $(PYMITE)/vm
 PYMITEINC = $(PYMITEVM)
 PYMITEINC += $(PYMITEPLAT)
 PYMITEINC += $(OUTDIR)
+
 FLIGHTPLANLIB = $(OPMODULEDIR)/FlightPlan/lib
 FLIGHTPLANS = $(OPMODULEDIR)/FlightPlan/flightplans
 
 UAVOBJSYNTHDIR = $(OUTDIR)/../uavobject-synthetics/flight
+
+# optional component libraries
+include $(PIOSCOMMONLIB)/FreeRTOS/library.mk
+include $(PIOSCOMMONLIB)/dosfs/library.mk
+include $(PIOSCOMMONLIB)/msheap/library.mk
+
+# XXX this should be removed when the PIOS code can be built without being configured
+# or otherwise cherry-picked by the application
+EXTRAINCDIRS +=	$(PIOS) $(PIOS)/inc
+SRC	+=	$(PIOSCOMMON)/pios_bmp085.c \
+		$(PIOSCOMMON)/pios_com.c \
+		$(PIOSCOMMON)/pios_crc.c \
+		$(PIOSCOMMON)/pios_eeprom.c \
+		$(PIOSCOMMON)/pios_flashfs_objlist.c \
+		$(PIOSCOMMON)/pios_hmc5883.c \
+		$(PIOSCOMMON)/pios_i2c_esc.c \
+		$(PIOSCOMMON)/pios_iap.c \
+		$(PIOSCOMMON)/pios_l3g4200.c \
+		$(PIOSCOMMON)/pios_lis331.c \
+		$(PIOSCOMMON)/pios_rcvr.c \
+		$(PIOSCOMMON)/pios_sdcard.c \
+		$(PIOSCOMMON)/printf-stdarg.c
+
+# target support library should come last
+ifneq ($(M4),)
+include $(PIOS)/STM32F4xx/library.mk
+else
+include $(PIOS)/STM32F2xx/library.mk
+endif
 
 # List C source files here. (C dependencies are automatically generated.)
 # use file-extension c for "c-only"-files
@@ -144,12 +165,13 @@ SRC += $(OPSYSTEM)/taskmonitor.c
 SRC += $(OPUAVTALK)/uavtalk.c
 SRC += $(OPUAVOBJ)/uavobjectmanager.c
 SRC += $(OPUAVOBJ)/eventdispatcher.c
+
 else
+
 ## TESTCODE
 SRC += $(OPTESTS)/test_common.c
 SRC += $(OPTESTS)/$(TESTAPP).c
 endif
-
 
 #ifeq ($(DEBUG),YES)
 SRC += $(OPSYSTEM)/dcc_stdio.c
@@ -159,98 +181,20 @@ SRC += $(OPSYSTEM)/cm3_fault_handlers.c
 ## UAVOBJECTS
 ifndef TESTAPP
 #include $(UAVOBJSYNTHDIR)/Makefile.inc
-include ./UAVObjects.inc
+include $(WHEREAMI)/UAVObjects.inc
 SRC += $(UAVOBJSRC)
 endif
 
 ## MAVLINK MISSION LIB
 SRC += $(MAVLINKMISSIONLIB)/waypoints.c
 
-## PIOS Hardware (STM32F2xx)
-SRC += $(PIOSSTM32F2XX)/startup.c
-SRC += $(PIOSSTM32F2XX)/vectors_stm32f2xx.c
-SRC += $(PIOSSTM32F2XX)/pios_sys.c
-SRC += $(PIOSSTM32F2XX)/pios_led.c
-SRC += $(PIOSSTM32F2XX)/pios_delay.c
-SRC += $(PIOSSTM32F2XX)/pios_usart.c
-SRC += $(PIOSSTM32F2XX)/pios_irq.c
-SRC += $(PIOSSTM32F2XX)/pios_adc.c
-SRC += $(PIOSSTM32F2XX)/pios_i2c.c
-SRC += $(PIOSSTM32F2XX)/pios_spi.c
-SRC += $(PIOSSTM32F2XX)/pios_ppm.c
-SRC += $(PIOSSTM32F2XX)/pios_debug.c
-SRC += $(PIOSSTM32F2XX)/pios_gpio.c
-SRC += $(PIOSSTM32F2XX)/pios_exti.c
-SRC += $(PIOSSTM32F2XX)/pios_wdg.c
-SRC += $(PIOSSTM32F2XX)/pios_buzzer.c
-
-## PIOS Hardware (Common)
-SRC += $(PIOSCOMMON)/pios_bmp085.c
-SRC += $(PIOSCOMMON)/pios_com.c
-SRC += $(PIOSCOMMON)/pios_crc.c
-SRC += $(PIOSCOMMON)/pios_eeprom.c
-SRC += $(PIOSCOMMON)/pios_flashfs_objlist.c
-SRC += $(PIOSCOMMON)/pios_hmc5883.c
-SRC += $(PIOSCOMMON)/pios_i2c_esc.c
-SRC += $(PIOSCOMMON)/pios_iap.c
-SRC += $(PIOSCOMMON)/pios_l3g4200.c
-SRC += $(PIOSCOMMON)/pios_lis331.c
-SRC += $(PIOSCOMMON)/pios_rcvr.c
-SRC += $(PIOSCOMMON)/pios_sdcard.c
-SRC += $(PIOSCOMMON)/printf-stdarg.c
-
 ## Libraries for flight calculations
 SRC += $(FLIGHTLIB)/fifo_buffer.c
 SRC += $(FLIGHTLIB)/WorldMagModel.c
 SRC += $(FLIGHTLIB)/CoordinateConversions.c
 
-## CMSIS for STM32
-# XXX  should just link with a .a
-SRC += $(CMSISDIR)/core_cm3.c
-#SRC += $(CMSISDIR)/system_stm32f2xx.c
-SRC += $(CMSISDIR)/system_stm32f4xx.c
-
-## Used parts of the STM-Library
-# XXX  should just link with a .a
-SRC += $(STMSPDSRCDIR)/stm32f2xx_adc.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_crc.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_dbgmcu.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_dma.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_exti.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_flash.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_gpio.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_i2c.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_iwdg.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_pwr.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_rcc.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_rtc.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_spi.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_syscfg.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_tim.c
-SRC += $(STMSPDSRCDIR)/stm32f2xx_usart.c
-SRC += $(STMSPDSRCDIR)/misc.c
-
-## RTOS
-SRC += $(RTOSSRCDIR)/list.c
-SRC += $(RTOSSRCDIR)/queue.c
-SRC += $(RTOSSRCDIR)/tasks.c
-SRC += $(RTOSSRCDIR)/timers.c
-
-## RTOS Portable
-SRC += $(RTOSSRCDIR)/portable/GCC/ARM_CM3/port.c
-#SRC += $(RTOSSRCDIR)/portable/MemMang/heap_2.c
-
-## Better malloc/free
-SRC += $(PIOSCOMMONLIB)/msheap/msheap.c
-SRC += $(PIOSCOMMONLIB)/msheap/pios_msheap.c
-
-## Dosfs file system
-SRC += $(DOSFSDIR)/dosfs.c
-SRC += $(DOSFSDIR)/dfs_sdcard.c
-
 # List C source files here which must be compiled in ARM-Mode (no -mthumb).
 # use file-extension c for "c-only"-files
-## just for testing, timer.c could be compiled in thumb-mode too
 SRCARM =
 
 # List C++ source files here.
@@ -276,7 +220,7 @@ ASRCARM =
 
 # List any extra directories to look for include files here.
 #    Each directory must be seperated by a space.
-EXTRAINCDIRS  =  $(OPSYSTEM)
+EXTRAINCDIRS  += $(OPSYSTEM)
 EXTRAINCDIRS  += $(OPSYSTEMINC)
 EXTRAINCDIRS  += $(OPUAVTALK)
 EXTRAINCDIRS  += $(OPUAVTALKINC)
@@ -286,21 +230,8 @@ EXTRAINCDIRS  += $(MAVLINKMISSIONLIB)
 EXTRAINCDIRS  += $(OPUAVOBJ)
 EXTRAINCDIRS  += $(OPUAVOBJINC)
 EXTRAINCDIRS  += $(UAVOBJSYNTHDIR)
-EXTRAINCDIRS  += $(PIOS)
-EXTRAINCDIRS  += $(PIOSINC)
 EXTRAINCDIRS  += $(FLIGHTLIBINC)
-EXTRAINCDIRS  += $(PIOSSTM32F2XX)
-EXTRAINCDIRS  += $(PIOSSTM32F2XXINC)
-EXTRAINCDIRS  += $(PIOSCOMMON)
 EXTRAINCDIRS  += $(PIOSBOARDS)
-EXTRAINCDIRS  += $(STMSPDINCDIR)
-EXTRAINCDIRS  += $(STMUSBINCDIR)
-EXTRAINCDIRS  += $(CMSISDIR)
-EXTRAINCDIRS  += $(DOSFSDIR)
-EXTRAINCDIRS  += $(MSDDIR)
-EXTRAINCDIRS  += $(RTOSINCDIR)
-EXTRAINCDIRS  += $(APPLIBDIR)
-EXTRAINCDIRS  += $(RTOSSRCDIR)/portable/GCC/ARM_CM3
 EXTRAINCDIRS  += $(PYMITEINC)
 
 EXTRAINCDIRS += ${foreach MOD, ${MODULES} ${PYMODULES}, $(OPMODULEDIR)/${MOD}/inc} ${OPMODULEDIR}/System/inc
@@ -319,9 +250,6 @@ EXTRA_LIBDIRS =
 # for newlib-lpc (file: libnewlibc-lpc.a):
 #    EXTRA_LIBS = newlib-lpc
 EXTRA_LIBS =
-
-# Path to Linker-Scripts
-LINKERSCRIPTPATH = $(PIOSSTM32F2XX)
 
 # Optimization level, can be [0, 1, 2, 3, s].
 # 0 = turn off optimization. s = optimize for size.
@@ -345,12 +273,9 @@ DEBUGF = dwarf-2
 
 # Place project-specific -D (define) and/or
 # -U options for C here.
-CDEFS = -DSTM32F2XX
 #CDEFS += -DMAVLINK_SEPARATE_HELPERS
 CDEFS += -DMAVLINK_USE_CONVENIENCE_FUNCTIONS
-CDEFS += -D__ARM_ARCH_7M__
-CDEFS += -DHSE_VALUE=$(OSCILLATOR_FREQ)
-CDEFS += -DUSE_STDPERIPH_DRIVER
+CDEFS += -DSYSCLK_FREQ=$(SYSCLK_FREQ)
 CDEFS += -DUSE_$(BOARD)
 
 # Place project-specific -D and/or -U options for
@@ -417,13 +342,13 @@ MATH_LIB = -lm
 #  -Wl,...:     tell GCC to pass this to linker.
 #    -Map:      create map file
 #    --cref:    add cross reference to  map file
-LDFLAGS = -nostartfiles -Wl,-Map=$(OUTDIR)/$(TARGET).map,--cref,--gc-sections
+LDFLAGS += -nostartfiles -Wl,-Map=$(OUTDIR)/$(TARGET).map,--cref,--gc-sections
 LDFLAGS += $(patsubst %,-L%,$(EXTRA_LIBDIRS))
 LDFLAGS += $(patsubst %,-l%,$(EXTRA_LIBS))
 LDFLAGS += $(MATH_LIB)
 
-# Hardcoded linker script names for now
-LDFLAGS +=-T$(LINKERSCRIPTPATH)/link_STM32F2xx_OP_memory.ld -T$(LINKERSCRIPTPATH)/link_STM32F2xx_sections.ld
+# Linker scripts
+LDFLAGS += $(addprefix -T,$(LINKER_SCRIPTS_APP))
 
 # Define programs and commands.
 REMOVE  = $(REMOVE_CMD) -f
